--- a/src/global.css
+++ b/src/global.css
@@ -12,16 +12,25 @@ body {
 
 a{
     text-decoration: none;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    border: 3px;
+    border-color: rgb(231, 89, 12) solid;
+    background-color: rgb(12, 12, 12);
+    font-size: large;
+    cursor: pointer;
+    transition: 0.3s;
+    border-radius: 10px;
 }
 
 .produto-nome{
     text-align: center;
     font-size: 0.4rem;
+    color:#0a0a0a;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .carousel-container{
-    border: 2px red solid;
+    border: 2px rgb(238, 225, 225) solid;
 }
 
 
@@ -36,7 +45,7 @@ a{
     background: white;
     text-align: center;
     flex-wrap: wrap;
-    border: blue 2px solid;
+    border: rgb(123, 123, 161) 2px solid;
 }
 
 
@@ -51,7 +60,8 @@ a{
 
 .figures-Home{
     text-align: center;
-    color: white;
+    color: rgb(255, 255, 255);
+    
 }
 
 
@@ -66,9 +76,6 @@ a{
 
 
 
-.container-Figures-Home{
-    background: red;
-}
 
 
 
@@ -93,6 +100,7 @@ a{
 .container-Produtos-Home{
     text-align: center;
     display: flex;
+    margin:10px;
 }
 
 
@@ -105,8 +113,8 @@ a{
 .paginaInicial{
     text-align: center;
     padding: 20px;
-    background-color: #fff;
-    border: 5px aqua solid;
+    background-color: #0a0a0a;
+    border: 5px rgb(231, 89, 12) solid;;
     border-radius: 5px;
 }
 
@@ -114,7 +122,13 @@ a{
 
 
 h1 {
+    color: #fffdfd;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+h2 {
     color: #000000;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: medium;
 }
 
 
@@ -150,4 +164,32 @@ h1 {
 .produtosDisponiveis{
     text-align: center;
     color: white;
+
+
 }
+
+.cabecario{
+    background-color: rgb(0, 0, 0);
+    border: 5px rgb(231, 89, 12) solid;
+color:#fff;
+margin-left: -47px;
+margin-top: -24px;
+margin-right: -5px;
+
+}
+
+
+.rodape{
+background-color: rgb(0, 0, 0);
+border: 5px rgb(231, 89, 12) solid;
+color:#fff;
+margin-left: -5px;
+margin-top: 180px;
+margin-right: -5px;
+
+}
+
+
+
+
+
